package org.example;

import org.springframework.data.repository.CrudRepository;


public interface ProjectRepository extends CrudRepository<Project,Long>
{ }